--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ reqwest = "0.11.18"
 serde_json = "1.0"
 serenity = "0.11"
 sha2 = "0.10.7"
+sysinfo = "0.29.7"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
